De-static most of FBXLoader and add inputstream-taking method.
ByteBuffer was static just to be lazy, apparently, because it wouldn't
reuse it for the next load. It just sat there as a dead hunk of memory
until you did your next fbx load. That's dumb!